@@ -3,6 +3,8 @@ Version: 1.5.0
 Date: ????
   Features:
     - Added a per-player setting to show game playtime in days. (#2)
+  Changes:
+    - The GUI will be hidden while in a cutscene. (#1)
   Bugfixes:
     - Fixed that some mod settings had two info icons.
 ---------------------------------------------------------------------------------------------------
